--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,3 +1,19 @@
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+@mixin leptop {
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
+}
+
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -17,6 +33,7 @@
       color: #5d5b8d;
       font-weight: bold;
       font-size: 24px;
+      
     }
     .title {
       color: #5d5b8d;
@@ -81,10 +98,15 @@
     height: 80%;
     display: flex;
     overflow: hidden;
+    @include tablet{
+      width: 90%;
+    }
     .sidebar {
       flex: 1;
       background-color: #3e3c61;
-      width: 30% !important;
+      @include tablet{
+        position: relative;
+      }
 
       .navbar {
         display: flex;
@@ -97,6 +119,9 @@
 
         .logo {
           font-weight: bold;
+          @include tablet{
+            display: none;
+          }
         }
         .user {
           display: flex;
@@ -114,6 +139,10 @@
             font-size: 10px;
             border: none;
             cursor: pointer;
+            @include tablet{
+              position: absolute;
+              bottom: 10px;
+            }
           }
         }
       }
@@ -221,16 +250,29 @@
             flex-direction: column;
             gap: 10px;
 
-            p{
+            p {
               background-color: white;
               padding: 10px 20px;
               border-radius: 0px 10px 10px 10px;
+              max-width: max-content;
             }
             img {
               width: 40px;
               height: 40px;
               border-radius: 50%;
               object-fit: cover;
+            }
+          }
+          &.owner {
+            flex-direction: row-reverse;
+
+            .messageContent {
+              align-items: flex-end;
+            }
+            p {
+              background-color: #8da4f1;
+              color: white;
+              border-radius: 10px 0px 10px 10px;
             }
           }
         }
