--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -138,6 +138,7 @@
             background-color: #5d5b8d;
             color: #ddddf7;
             font-size: 10px;
+            height: 20px;
             border: none;
             cursor: pointer;
             @include tablet{
@@ -258,10 +259,10 @@
               max-width: max-content;
             }
             img {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              object-fit: cover;
+              width: 60%;
+              height: 60%;
+              border-radius: 10px 0px 10px 10px;
+              
             }
           }
           &.owner {
