--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -13,8 +13,11 @@
     @content;
   }
 }
+.profileCointainer{
+  
+}
 
-.formContainer { 
+.formContainer{ 
   background-image: linear-gradient(140deg, blue, #b71717);
   height: 100vh;
   display: flex;
