--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -15,13 +15,14 @@
 }
 
 
-.formContainer{ 
+.formContainer {
   background-image: linear-gradient(140deg, blue, #b71717);
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+  -webkit-box-reflect: below 0px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
 
   .formWrapper {
     background-color: #7a0505;
@@ -32,10 +33,19 @@
     flex-direction: column;
     gap: 10px;
     align-items: center;
-    img{
-      width:200px;
+    .profileImg {
+      width: 200px;
       height: 200px;
       border-radius: 50%;
+    }
+    button {
+      background-color: #e70000;
+      color: #ddddf7;
+      border-radius: 5px;
+      font-size: 12px;
+      height: 30px;
+      border: none;
+      cursor: pointer;
     }
     .logo {
       color: #cccbdf;
@@ -64,7 +74,7 @@
           color: rgb(175, 175, 175);
         }
       }
-     
+
       label {
         display: flex;
         align-items: center;
@@ -93,8 +103,8 @@
       color: #cccbdf;
       font-size: 12px;
       margin-top: 10px;
-      a{
-        color:#8286ff;
+      a {
+        color: #8286ff;
       }
     }
   }
@@ -113,7 +123,8 @@
     height: 80%;
     display: flex;
     overflow: hidden;
-    -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+    -webkit-box-reflect: below 0px
+      linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
     @include tablet {
       width: 90%;
     }
@@ -170,7 +181,9 @@
               position: absolute;
               bottom: 10px;
             }
+           
           }
+          
         }
       }
       .search {
@@ -215,6 +228,10 @@
           object-fit: cover;
         }
         .userChatinfo {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: start;
           span {
             font-size: 18px;
             font-weight: 500;
