--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -253,6 +253,16 @@
         justify-content: space-between;
         padding: 10px;
         color: lightgray;
+        span{
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          img{
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+          }
+        }
 
         .chatIcons {
           display: flex;
