--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -231,7 +231,7 @@
           display: flex;
           flex-direction: column;
           justify-content: space-around;
-          align-items: start;
+          align-items: flex-start;
           span {
             font-size: 18px;
             font-weight: 500;
