--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -11,6 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/* loader Styles */
 .loaderWapper {
   background-image: linear-gradient(140deg, blue, #b71717);
   height: 99vh;
