Add emoji packs to the chats

--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -348,12 +348,34 @@
             color: lightgray;
           }
         }
+        .EmojiPickerReact{
+          position: absolute;
+          height: 350px;
+          width: 30% !important;
+          bottom: 160px;
+          // @include tablet{
+          //   width: 270px !important;
+          // }
+          // @include mobile{
+          //   width: 200px !important;
+          // }
+        }
+        // .EmojiPickerReact{
+        //   position: relative;
+        //   height: 500px;
+        //   width: 500px;
+        // }
         .send {
           display: flex;
           align-items: center;
           gap: 10px;
           svg {
             cursor: pointer;
+          }
+          .emojiButton{
+            background-color: transparent;
+            color: black;
+            font-size: 30px;
           }
           button {
             border: none;
