set styling to emoji

--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -363,7 +363,7 @@
           }
           .emojiButton{
             background-color: transparent;
-            color: black;
+            color: rgb(122, 119, 119);
             font-size: 30px;
           }
           button {
